--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-authors = ['Anonymous']
+authors = ['Zatoichi Labs']
 edition = '2018'
-name = 'node-template-runtime'
+name = 'plasma-cash-runtime'
 version = '2.0.0'
 [dependencies.babe]
 default-features = false
