--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,128 +1,9 @@
 [package]
-authors = ['Zatoichi Labs']
+authors = ['Zatoichi Labs <admin@zatoichi.labs>']
 edition = '2018'
 name = 'plasma-cash-runtime'
-version = '2.0.0'
-[dependencies.babe]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'srml-babe'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.babe-primitives]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'substrate-consensus-babe-primitives'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.balances]
-default_features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'srml-balances'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.client]
-default_features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'substrate-client'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
 version = '1.0.0'
 
-[dependencies.executive]
-default_features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'srml-executive'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.grandpa]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'srml-grandpa'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.indices]
-default_features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'srml-indices'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.offchain-primitives]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'substrate-offchain-primitives'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.primitives]
-default_features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'substrate-primitives'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.rstd]
-default_features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'sr-std'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.runtime-io]
-default_features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'sr-io'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.safe-mix]
-default-features = false
-version = '1.0'
-
-[dependencies.serde]
-features = ['derive']
-optional = true
-version = '1.0'
-
-[dependencies.sr-primitives]
-default_features = false
-git = 'https://github.com/paritytech/substrate.git'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.substrate-session]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.sudo]
-default_features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'srml-sudo'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.support]
-default_features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'srml-support'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.system]
-default_features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'srml-system'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.timestamp]
-default_features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'srml-timestamp'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
-
-[dependencies.version]
-default_features = false
-git = 'https://github.com/paritytech/substrate.git'
-package = 'sr-version'
-rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
 [build-dependencies.wasm-builder-runner]
 package = 'substrate-wasm-builder-runner'
 version = '1.0.2'
@@ -153,3 +34,124 @@ std = [
     'offchain-primitives/std',
     'substrate-session/std',
 ]
+
+[dependencies.babe]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-babe'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.babe-primitives]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'substrate-consensus-babe-primitives'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.balances]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-balances'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.client]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'substrate-client'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.codec]
+default-features = false
+features = ['derive']
+package = 'parity-scale-codec'
+version = '1.0.0'
+
+[dependencies.executive]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-executive'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.grandpa]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-grandpa'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.indices]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-indices'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.offchain-primitives]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'substrate-offchain-primitives'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.primitives]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'substrate-primitives'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.rstd]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'sr-std'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.runtime-io]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'sr-io'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.safe-mix]
+default-features = false
+version = '1.0'
+
+[dependencies.serde]
+features = ['derive']
+optional = true
+version = '1.0'
+
+[dependencies.sr-primitives]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.substrate-session]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.sudo]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-sudo'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.support]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-support'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.system]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-system'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.timestamp]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'srml-timestamp'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
+
+[dependencies.version]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'sr-version'
+rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
