--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -81,6 +81,11 @@ git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-offchain-primitives'
 rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
 
+# TODO Publish package and reference that
+[dependencies.plasma-cash-token]
+path = '../../plasma-cash-token'
+version = '0.1.0'
+
 [dependencies.primitives]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
