--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -82,8 +82,8 @@ package = 'substrate-offchain-primitives'
 rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
 
 # TODO Publish package and reference that
-[dependencies.plasma-cash-token]
-path = '../../plasma-cash-token'
+[dependencies.plasma-cash-tokens]
+path = '../../plasma-cash-tokens'
 version = '0.1.0'
 
 [dependencies.primitives]
