--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -83,7 +83,7 @@ rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
 
 # TODO Publish package and reference that
 [dependencies.plasma-cash-tokens]
-path = '../../plasma-cash-tokens'
+path = '../../tokens'
 version = '0.1.0'
 
 [dependencies.primitives]
