--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -23,6 +23,7 @@ std = [
     'indices/std',
     'grandpa/std',
     'primitives/std',
+    'plasma-cash-tokens/std',
     'sr-primitives/std',
     'system/std',
     'timestamp/std',
@@ -83,6 +84,7 @@ rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
 
 # TODO Publish package and reference that
 [dependencies.plasma-cash-tokens]
+default-features = false
 path = '../../tokens'
 version = '0.1.0'
 
